important right syntax css.
important se phle ! aega.

--- a/video player/css/style.css
+++ b/video player/css/style.css
@@ -22,7 +22,7 @@ h1{
 .screen{
     cursor: pointer;
     width: 60%;
-    background-color: black important;
+    background-color: black !important;
 }
 
 .controls{
