script.js completed
with full functionality script is completed all the way

--- a/currency exchange/style.css
+++ b/currency exchange/style.css
@@ -58,6 +58,7 @@ p{
     padding: 10px 20px;
     border: 1px solid lightgrey;
     font-size: 16px;
+    width: 50%;
 }
 
 
@@ -67,7 +68,7 @@ p{
     color: white;
     font-size: 28px;
     text-align: right;
-    width: 100px;
+    width: 50%;
 }
 
 
