--- a/random meal selector/style.css
+++ b/random meal selector/style.css
@@ -51,9 +51,114 @@ input[type= 'text']{           /*search bar bara nazar aega */
     border-bottom-right-radius: 5px;
 }
 
+.meals{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 20px;
+    margin-top: 20px;
+}
+
+.meal{
+    cursor: pointer;
+    position: relative;
+    width: 180px;
+    height: 180px;
+    text-align: center;
+}
+
+.meal img{
+    width: 100%;
+    height: 100%;
+    border: 4px solid white;
+    border-radius: 5px;
+}
+
+.meal-info{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.5s ease-in;
+}
+
+.meal:hover .meal-info{
+    opacity: 1;
+}
+
+.selected-meal{
+    margin: 30px auto;
+    width: 70%;
+}
+
+.selected-meal img{
+    width: 300px;
+    margin: 15px;
+    border: 4px solid white;
+    border-radius: 2px;
+}
+
+.selected-meal-info{
+    margin: 20px;
+    padding: 10px;
+    border: 2px dashed white;
+}
+
+.selected-meal p{
+    margin: 0;
+    letter-spacing: 0.5px;
+    line-height: 1.5px;
+    text-align: justify;
+}
+
+.selected-meal ul{
+    padding-left: 0;
+    list-style-type: none;
+}    
+
+.selected-meal ul li{
+    border: 1px solid white;
+    border-radius: 5px;
+    background-color: white;
+    display: inline-block;
+    color: #2d2013;
+    font-size: 12px;
+    font-weight: bold;
+    margin: 0 5px 5px 0;
+    padding: 5px;
+}
+
+@media(max-width: 800px){
+    .meals{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+@media(max-width: 700px){
+    .meals{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .meal{
+        height: 200px;
+        width: 200px;
+    }
+}
+
 @media (max-width: 500px) {
     input[type='text']{
         width: 100%;              /*screen responsive bnarhe hain hm */
+    }
+    .meals{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .meal{
+        height: 300px;
+        width: 300px;
     }
 }
 
